read me updated

--- a/main/templates/main/team.html
+++ b/main/templates/main/team.html
@@ -4,6 +4,6 @@
 
 {% block content %}
 <div class="container mt-3 section2">
-    <h1>Our Team</h1>
+    <h1>Our Team rashmi blunga</h1>
 </div>
 {% endblock %}
