--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                <img src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                <img class="home-image" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us" style="width: 100%;">
             </div>
         </div>
     </div>
@@ -326,13 +326,13 @@
                         <a href="{% url 'explore' %}"><div class="btn btn-primary">Read More</div></a> 
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <img src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                <div class="col-xs-12 col-sm-12 col-md-6 home-image" style="text-align: center;">
+                    <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                 </div>
             </div>
             <div class="row mt-5 mb-5">
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <img src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                    <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>C++ Tutorials</h3>
@@ -351,7 +351,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                    <img src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                    <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                 </div>
             </div>
         </div>
@@ -365,7 +365,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Python Introduction</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                        <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
                     <div class="container mt-4" style="text-align: center;">
@@ -377,7 +377,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>C++ Introduction</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                        <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
                     <div class="container mt-4" style="text-align: center;">
@@ -389,7 +389,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
                     <h3>Python Full Notes</h3>
                     <div class="col-xs-12 col-sm-12 col-md-6" style="text-align: center;">
-                        <img src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
+                        <img style="width: 100%;" src="https://compass-ssl.microsoft.com/assets/f9/4c/f94c2916-6a4e-4cbc-9bc1-9f0e0f4ee46c.png?n=ioc_home_bottomleft_4up_491x276.png" alt="Us">
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi velit totam sit impedit repellat explicabo distinctio culpa. Optio a non mollitia impedit repellat nihil harum distinctio, ipsum, numquam, provident amet.</p>
                     <div class="container mt-4" style="text-align: center;">
