python articles added

--- a/main/templates/main/Articles/Python/1001.html
+++ b/main/templates/main/Articles/Python/1001.html
@@ -2,7 +2,59 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Introduction to Python Programming</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="https://www.linkedin.com/in/rashmi-ranjan-das-1726351a0/">Rashmi Ranjan Das</a></b>
+        <br>
+    </div>
+    <br>
+    <p class="article-content">
+        Python is developed by Guido van Rossum. Guido van Rossum started implementing Python in 1989. Python is a very simple programming language so even if you are new to programming, you can learn python without facing any issues.
+    </p>
+    <p class="article-content">
+        <b>Interesting Fact: </b>Python is named after the comedy television show Monty Python’s Flying Circus. It is not named after the Python snake.
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                Features of Python Programming
+            </b>
+        </p>
+    </div>
+    <p class="article-subhead">
+        What Can You Do with Python?
+    </p>
+    <p class="article-content">
+        You may be wondering what all are the applications of Python. There are so many applications of Python, here are some of the them.
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>Web Development: </b>Web framework like Django and Flask are based on Python. They help you write server side code which helps you manage database, write backend programming logic, mapping urls etc.</li>
+            </ul>
+            <ul>
+                <li><b>Machine Learning: </b>There are many machine learning applications written in Python. Machine learning is a way to write a logic so that a machine can learn and solve a particular problem on its own. For example, products recommendation in websites like Amazon, Flipkart, eBay etc. is a machine learning algorithm that recognises user’s interest. Face recognition and Voice recognition in your phone is another example of machine learning.</li>
+            </ul>
+            <ul>
+                <li><b>Data Analysis: </b>Data analysis and data visualisation in form of charts can also be developed using Python.</li>
+            </ul>
+            <ul>
+                <li><b>Scripting: </b>Scripting is writing small programs to automate simple tasks such as sending automated response emails etc. Such type of applications can also be written in Python programming language.</li>
+            </ul>
+            <ul>
+                <li><b>Game Development: </b>You can develop games using Python.</li>
+            </ul>
+            <ul>
+                <li><b>Embedded Applications: </b>You can develop Embedded Applications.</li>
+            </ul>
+            <ul>
+                <li><b>Desktop Applications: </b>You can develop desktop application in Python using library like TKinter or QT.</li>
+            </ul>
+        </div>
+    </p>
 </div>
 {% endblock %}
