--- a/main/templates/main/Articles/Python/1002.html
+++ b/main/templates/main/Articles/Python/1002.html
@@ -2,7 +2,110 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Advantages and Disadvantages Of Python Programming</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="https://www.linkedin.com/in/rashmi-ranjan-das-1726351a0/">Rashmi Ranjan Das</a></b>
+        <br>
+    </div>
+    <br>
+    <p class="article-subhead">
+        Advantages of Python
+    </p>
+    <p class="article-content">
+        Let’s see how Python dominates over other languages.
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>Extensive Libraries: </b>Python downloads with an extensive library and it contain code for various purposes like regular expressions, documentation-generation, unit-testing, web browsers, threading, databases, CGI, email, image manipulation, and more. So, we don’t have to write the complete code for that manually.</li>
+            </ul>
+            <ul>
+                <li><b>Extensible: </b>As we have seen earlier, Python can be extended to other languages. You can write some of your code in languages like C++ or C. This comes in handy, especially in projects.</li>
+            </ul>
+            <ul>
+                <li><b>Embeddable: </b>Complimentary to extensibility, Python is embeddable as well. You can put your Python code in your source code of a different language, like C++. This lets us add scripting capabilities to our code in the other language.</li>
+            </ul>
+            <ul>
+                <li><b>Improved Productivity: </b>The language’s simplicity and extensive libraries render programmers more productive than languages like Java and C++ do. Also, the fact that you need to write less and get more things done.</li>
+            </ul>
+            <ul>
+                <li><b>IOT Opportunities: </b>Since Python forms the basis of new platforms like Raspberry Pi, it finds the future bright for the Internet Of Things. This is a way to connect the language with the real world.</li>
+            </ul>
+            <ul>
+                <li><b>Simple and Easy: </b>When working with Java, you may have to create a class to print ‘Hello World’. But in Python, just a print statement will do. It is also quite easy to learn, understand, and code. This is why when people pick up Python, they have a hard time adjusting to other more verbose languages like Java.</li>
+            </ul>
+            <ul>
+                <li><b>Readable: </b>Because it is not such a verbose language, reading Python is much like reading English. This is the reason why it is so easy to learn, understand, and code. It also does not need curly braces to define blocks, and indentation is mandatory. This further aids the readability of the code.</li>
+            </ul>
+            <ul>
+                <li><b>Object-Oriented: </b>This language supports both the procedural and object-oriented programming paradigms. While functions help us with code reusability, classes and objects let us model the real world. A class allows the encapsulation of data and functions into one.</li>
+            </ul>
+            <ul>
+                <li><b>Free and Open-Source: </b>Like we said earlier, Python is freely available. But not only can you download Python for free, but you can also download its source code, make changes to it, and even distribute it. It downloads with an extensive collection of libraries to help you with your tasks.</li>
+            </ul>
+            <ul>
+                <li><b>Portable: </b>When you code your project in a language like C++, you may need to make some changes to it if you want to run it on another platform. But it isn’t the same with Python. Here, you need to code only once, and you can run it anywhere. This is called Write Once Run Anywhere (WORA). However, you need to be careful enough not to include any system-dependent features.</li>
+            </ul>
+            <ul>
+                <li><b>Interpreted: </b>Lastly, we will say that it is an interpreted language. Since statements are executed one by one, debugging is easier than in compiled languages.</li>
+            </ul>
+        </div>
+    </p>
+    <p class="article-subhead">
+        Advantages of Python Over Other Languages
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>Less Coding: </b>Almost all of the tasks done in Python requires less coding when the same task is done in other languages. Python also has an awesome standard library support, so you don’t have to search for any third-party libraries to get your job done. This is the reason that many people suggest learning Python to beginners.</li>
+            </ul>
+            <ul>
+                <li><b>Affordable: </b>Python is free therefore individuals, small companies or big organizations can leverage the free available resources to build applications. Python is popular and widely used so it gives you better community support.</li>
+            </ul>
+            <ul>
+                <li><b>Python is for Everyone: </b>Python code can run on any machine whether it is Linux, Mac or Windows. Programmers need to learn different languages for different jobs but with Python, you can professionally build web apps, perform data analysis and machine learning, automate things, do web scraping and also build games and powerful visualizations. It is an all-rounder programming language.</li>
+            </ul>
+        </div>
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                Advantages and Disadvantages of Python Programming
+            </b>
+        </p>
+    </div>
+    <p class="article-subhead">
+        Disadvantages of Python
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>Speed Limitations: </b>We have seen that Python code is executed line by line. But since Python is interpreted, it often results in slow execution. This, however, isn’t a problem unless speed is a focal point for the project. In other words, unless high speed is a requirement, the benefits offered by Python are enough to distract us from its speed limitations.</li>
+            </ul>
+            <ul>
+                <li><b>Weak in Mobile Computing and Browsers: </b>While it serves as an excellent server-side language, Python is much rarely seen on the client-side. Besides that, it is rarely ever used to implement smartphone-based applications. One such application is called Carbonnelle. The reason it is not so famous despite the existence of Brython is that it isn’t that secure.
+                    </li>
+            </ul>
+            <ul>
+                <li><b>Design Restrictions: </b>As you know, Python is dynamically-typed. This means that you don’t need to declare the type of variable while writing the code. It uses duck-typing. But wait, what’s that? Well, it just means that if it looks like a duck, it must be a duck. While this is easy on the programmers during coding, it can raise run-time errors.</li>
+            </ul>
+            <ul>
+                <li><b>Underdeveloped Database Access Layers: </b>Compared to more widely used technologies like JDBC (Java DataBase Connectivity) and ODBC (Open DataBase Connectivity), Python’s database access layers are a bit underdeveloped. Consequently, it is less often applied in huge enterprises.</li>
+            </ul>
+            <ul>
+                <li><b>Simple: </b>No, we’re not kidding. Python’s simplicity can indeed be a problem. Take my example. I don’t do C++, I’m more of a Python person. To me, its syntax is so simple that the verbosity of C++ code seems unnecessary.</li>
+            </ul>
+        </div>
+    </p>
+    <p class="article-subhead">
+        Summary
+    </p>
+    <p class="article-content">
+        Concluding the tutorial on advantages and disadvantages of Python, I would say while there are some speed, security, and runtime issues, Python is a great language to pick up. Its popularity speaks for itself. And this popularity is attributed to its being free, easy, interpreted, object-oriented, extensible, embeddable, portable, and readable.
+    </p>
 </div>
 {% endblock %}
