--- a/main/templates/main/Articles/Python/1003.html
+++ b/main/templates/main/Articles/Python/1003.html
@@ -2,7 +2,229 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
-    
+<div class="container mt-5 mb-5">
+    <div class="article-subhead" style="text-align: center">
+        <h3>Roadmap To Become Python Developer</h3>
+    </div>
+    <div class="article-content" style="text-align: center;">
+        Article by <b><a href="https://www.linkedin.com/in/rashmi-ranjan-das-1726351a0/">Rashmi Ranjan Das</a></b>
+        <br>
+    </div>
+    <br>
+    <p class="article-content">
+        In a world of Java and C++, Python is quickly making its way into the charts. Python developers are high in demand, and not so high in supply. This means they also get paid a lot. If you’re reading this, it probably means you’ve decided or are deciding to start a career in Python and want to become a Python Developer. How to land a job as a Python Developer? This article will try to answer all your queries about making a career as a Python Developer.
+    </p>
+    <p class=article-subhead>
+        How to Become a Python Developer?
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li>Decide to learn Python; decide why you want to do it.</li>
+            </ul>
+            <ul>
+                <li>Follow online tutorials. Keep practising as you learn.</li>
+            </ul>
+            <ul>
+                <li>Read some good books on Python and enroll in an online Python course. </li>
+            </ul>
+            <ul>
+                <li>Keep reading the official Python documentation for different constructs.</li>
+            </ul>
+            <ul>
+                <li>•	Take a peek into the source code of your favorite Python package to know how it works.</li>
+            </ul>
+        </div>
+    </p>
+    <p class="article-subhead">What to Learn in Python?</p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li>Learn the basics. Learn about its history, syntax, installation, and some basic constructs like statements, variables, and operators.</li>
+            </ul>
+            <ul>
+                <li>Find out about the applications of Python. Also understand the differences between Python 2 and Python 3.</li>
+            </ul>
+            <ul>
+                <li>Learn about basic data structures like lists, sets, and dictionaries.</li>
+            </ul>
+            <ul>
+                <li>Understand important concepts like decision making and loops.</li>
+            </ul>
+            <ul>
+                <li>Learn how to create a virtual environment.</li>
+            </ul>
+            <ul>
+                <li>Move on to functions and recursion.</li>
+            </ul>
+            <ul>
+                <li>Get started with object-oriented concepts like classes and methods, and inheritance and overloading.</li>
+            </ul>
+            <ul>
+                <li>Find out about modules and packages, and get some experience with common modules like os, namedtuple, and calendar.</li>
+            </ul>
+            <ul>
+                <li>Learn file handling. Learn about more complex topics like generators and decorators, and shallow and deep copying.</li>
+            </ul>
+            <ul>
+                <li>Also, learn to generate and use random numbers and regular expressions.</li>
+            </ul>
+            <ul>
+                <li>Learn about more complex topics like networking, XML processing, and multiprocessing.</li>
+            </ul>
+            <ul>
+                <li>Learn to build GUIs with Python.</li>
+            </ul>
+            <ul>
+                <li>Find out about exceptions and how to handle them.</li>
+            </ul>
+            <ul>
+                <li>Learn to use SciPy, NumPy, and Pandas.</li>
+            </ul>
+            <ul>
+                <li>Learn to debug, unit-test, log, serialize, and access the database.</li>
+            </ul>
+        </div>
+    </p>
+    <p class="article-subhead">Things to Master Python</p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>Frameworks: </b>You should now learn to work on a framework. Python has some very powerful frameworks like Django, Flask, and CherryPy. You can begin with Django, which is a very powerful framework following the DRY (Don’t Repeat Yourself) principle. It makes work easier for you and takes care of trivial things.</li>
+            </ul>
+            <ul>
+                <li><b>ORM Libraries: </b>ORM stands for Object Relational Mapping. This is a way to query and manipulate data from a database using an object-oriented paradigm. You can learn to use ORM libraries like SQLAlchemy and Django ORM. This is easier and faster than writing SQL.</li>
+            </ul>
+            <ul>
+                <li><b>Front-End Technologies: </b>Technologies like HTML5, CSS3, and JavaScript/jQuery are not a requirement to be a Python developer. But if you can, try to gain a basic understanding of these, and they will let you understand how things work and what is possible. As a Python developer, you may need to work with the front-end team.</li>
+            </ul>
+            <ul>
+                <li><b>Version Control: </b>Changes to a code multiple times by multiple people can ultimately break it. You should learn GitHub and its simple terms like push, pull, fork, and commit if you want to implement version control (you should).</li>
+            </ul>
+        </div>
+    </p>
+    <p class="article-subhead">Build Projects in Python</p>
+    <p class="article-content">
+        You now have enough skills; building some personal python projects will give you confidence. You can also build something to try and solve an actual problem you face. Once you feel confident enough, you can then build for popular open-source projects like Django.
+    </p>
+    <p class="article-subhead">
+        Who is a Good Python Developer?
+    </p>
+    <p class="article-content">
+        To be a good Python developer, you will need more than just technical knowledge and the following skills:
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li>A problem-solving mindset</li>
+            </ul>
+            <ul>
+                <li>Strong communication skills- You’ll need to communicate project requirements and features to your team. This will also help you write better documentation.</li>
+            </ul>
+            <ul>
+                <li>An eagerness to learn new tools and libraries</li>
+            </ul>
+            <ul>
+                <li>Knowledge of how things work internally</li>
+            </ul>
+            <ul>
+                <li>Strong technical skills</li>
+            </ul>
+        </div>
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                Features of Python Programming
+            </b>
+        </p>
+    </div>
+    <p class="article-subhead">
+        Job Market of Python in India
+    </p>
+    <p class="article-content">
+        Career prospects, demand for python developers increases. First, candidates do not prefer python to be their career. Later number of jobs available as a python developer. Top job sites provides60, 000 job listing in python. It shows the demand for python developers in India. It is a general-purpose language suitable for various designations such as web development, testing, scripting. Python has the number of merits in the market.
+    </p>
+    <p class="article-subhead">
+        Job Roles For Python Developers
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li>Research Analyst</li>
+            </ul>
+            <ul>
+                <li>DevOps Engineer</li>
+            </ul>
+            <ul>
+                <li>Python developer</li>
+            </ul>
+            <ul>
+                <li>Data Analyst</li>
+            </ul>
+            <ul>
+                <li>Software developer</li>
+            </ul>
+        </div>
+    </p>
+    <p class="article-content">
+        Python is necessary for an experienced one, for a better opportunity in their career. you are a java scripter its time to make yourself secure in python for beginners. You have to have strong knowledge in scientific, numeric modules to be well versed in python language salaries for experience one as a python developer ranges around 12 lakhs per annum.
+    </p>
+    <p class="article-subhead">
+        Top Companies Using Python
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li>NASA prefer python for application written and development</li>
+            </ul>
+            <ul>
+                <li>Yahoo to look up services, addresses prefer python language</li>
+            </ul>
+            <ul>
+                <li>Google uses python for their internal systems</li>
+            </ul>
+            <ul>
+                <li>Facebook, Youtube, Amazon, Paypal, etc</li>
+            </ul>
+        </div>
+    </p>
+    <p class="article-subhead">
+        Python Developer Salary Based on Experience
+    </p>
+    <p class="article-content">
+        <div class="article-content">
+            <ul>
+                <li><b>Entry-Level Python Developer Salary: </b>The average salary of entry-level Python developer salary in India is ₹427,293.</li>
+            </ul>
+            <ul>
+                <li><b>Mid-Level Python Developer Salary: </b>The average salary of a mid-level Python developer salary in India is ₹909,818.</li>
+            </ul>
+            <ul>
+                <li><b>Experienced Python Developer Salary: </b>The average salary of an experienced Python developer salary in India is ₹1,150,000.</li>
+            </ul>
+        </div>
+    </p>
+    <div class="img-container" style="text-align: center;">
+        <img class="article-img" style="height: 500px;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+        <p classname="article-img-desc">
+            <b>
+                Features of Python Programming
+            </b>
+        </p>
+    </div>
+    <p class="article-subhead">
+        Future of Python
+    </p>
+    <p class="article-content">
+        Python growth is promising in future. Top companies stuck with java, python trending technologies now and also in future. As a result of fact, python has become a core language, using python for research, production, development. Small, big, start-up organizations choose python to meet their customer requirements. Python has been voted as a favorite language rather than c, c ++, machine learning course, learn r programming. To write scripts, testing mobile devices it is the most demandable language in IT industry. Python just the great tool at large scale. Companies in India, us expecting highly skilled python developers for their companies. Statistics show that continuous rise in salaries for python developers. Python offers excellent management memory.
+    </p>
+    <p class="article-subhead">
+        Conclusion
+    </p>
+    <p class="article-content">
+        Python is a real-world programming language used in the commercial world. Quicker to learn, contains many libraries. Python trainers few in number. It is the fastest-growing programming language. By choosing python as a career, you can also be a part of the trending technologies. Without python language, we can’t deliver exceptional results.
+    </p>
 </div>
 {% endblock %}
