--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -153,6 +153,35 @@ svg{
     height: 100%;
   }
   
+  /*--------------------articles------------------------*/
+  .article-head {
+    font-size: 3em;
+    font-weight: 800;
+  }
+  
+  .article-subhead {
+    font-size: 2.2em;
+    font-weight: 700;
+    margin: 5px 0;
+  }
+  
+  .article-content {
+    font-size: 1.3em;
+  }
+  
+  .img-container {
+    padding: 5px;
+  }
+  
+  .article-img {
+    width: 85%;
+  }
+  
+  .article-img-desc {
+    font-size: 1.1em;
+    font-weight: 450;
+  }
+  
   /*-------------------------------flipper-card-----------------------------*/
   .card-flipper {
     position: relative;
