python articles added

--- a/main/templates/main/Articles/Python/1003.html
+++ b/main/templates/main/Articles/Python/1003.html
@@ -32,7 +32,7 @@
                 <li>Keep reading the official Python documentation for different constructs.</li>
             </ul>
             <ul>
-                <li>•	Take a peek into the source code of your favorite Python package to know how it works.</li>
+                <li>Take a peek into the source code of your favorite Python package to know how it works.</li>
             </ul>
         </div>
     </p>
