--- a/main/templates/main/articles.html
+++ b/main/templates/main/articles.html
@@ -36,7 +36,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">Python: Introduction</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">Python is developed by Guido van Rossum. Guido van Rossum started implementing Python in 1989. Python is a very simple programming language so even if you are new to programming, you can learn python without facing any issues.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'python1' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -52,7 +52,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">More About Python</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">The language has a lot of design limits and needs more testing time. The programmer has the possibility to see bugs only during run time. Python has high memory consumption and is not used in web browsers because it is not secure. Language flexibility is considered among both advantages and disadvantages of Python.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'python2' %}"><div class="btn btn-primary">Read More</div></a>
                       </div>
@@ -68,7 +68,7 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title">Roadmap to Become Python Developer</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text">In a world of Java and C++, Python is quickly making its way into the charts. Python developers are high in demand, and not so high in supply. This means they also get paid a lot. If you’re reading this, it probably means you’ve decided or are deciding to start a career in Python and want to become a Python Developer. How to land a job as a Python Developer? This article will try to answer all your queries about making a career as a Python Developer.</p>
                       <div style="text-align: center;">
                         <a href="{% url 'python3' %}""><div class="btn btn-primary">Read More</div></a>
                       </div>
