--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -3,7 +3,51 @@
 
 
 {% block content %}
-<div class="container mt-3 section2">
-    <h1>Contact Us</h1>
+<div class="container mt-5 mb-5">
+    <div style="text-align: center;" class="article-subhead mb-4">
+        Contact Us
+    </div>
+    <form action="mail" method="POST">
+        {% csrf_token %}
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="name"><b>Full Name</b></label>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="email"><b>Email Address</b></label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Email Address">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="address"><b>Address</b></label>
+          <input type="text" class="form-control" id="address" name="address" placeholder="Full Address">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="phone"><b>Phone Number</b></label>
+              <input type="number" class="form-control" id="phone" name="phone" placeholder="Phone Number">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="study"><b>Current Education</b></label>
+              <input type="text" class="form-control" id="study" name="study" placeholder="E.g. Btech, 10+2 etc.">
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="feedback"><b>Feedback/Suggestions/Request (If Any ?)</b></label>
+            <textarea class="form-control" id="feedback" name="feedback" rows="5"></textarea>
+          </div>
+        <div class="form-group">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+              <b>Agree to recieve future offers from us ?</b>
+            </label>
+          </div>
+        </div>
+        <div style="text-align: center;">
+            <button type="submit" class="btn btn-primary">Submit Feedback</button>
+        </div>
+      </form>
 </div>
 {% endblock %}
