--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -4,6 +4,14 @@
 
 {% block content %}
 <div class="container mt-5 mb-5">
+    {% for message in messages %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong>{{message}}</strong>
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endfor %}
     <div style="text-align: center;" class="article-subhead mb-4">
         Contact Us
     </div>
