--- a/main/templates/main/Articles/Python/1001.html
+++ b/main/templates/main/Articles/Python/1001.html
@@ -18,7 +18,7 @@
         <b>Interesting Fact: </b>Python is named after the comedy television show Monty Python’s Flying Circus. It is not named after the Python snake.
     </p>
     <div class="img-container" style="text-align: center;">
-        <img class="article-img" style="height: 500px;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
+        <img class="article-img" style="height: 70%;" src="https://wallpaperaccess.com/full/1397721.jpg" alt="1001">
         <p classname="article-img-desc">
             <b>
                 Features of Python Programming
